Lavet pages på github og designet page 4

--- a/02_Web_template_CSS_Tricks/index.html
+++ b/02_Web_template_CSS_Tricks/index.html
@@ -40,6 +40,11 @@
     </div>
     <div class="page" id="page4">
         <h1>Side 4</h1>
+        <div class="box">
+            <h3>Her er en div med position Relative</h3>
+            <div class="absolute">Absolute position i forhold til parent</div>
+            <div class="fixed">Fixed er i forhold til HELE siden</div>
+        </div>
     </div>
 </body>
 </html>
