--- a/03_Web_App_Opgave_mere_dybde/index.html
+++ b/03_Web_App_Opgave_mere_dybde/index.html
@@ -31,7 +31,23 @@
         </div>
         <div class="right">Her skal være et billede</div>
     </div>
-    <div class="page" id="page2"><h1>Side2</h1></div>
+    <div class="page" id="page2">
+        <div class="left">
+            <div>
+                <h1>Overskrift</h1>
+                <p>Her skal der være en masse tekst v alvoajksældfja øpodojaæoisgdhaoidhjgfæaslkhdhjaæl skjdoæaislkjd aoæislkdj aæosilfkjgislk jddæikd jaæsifhhæoijskjd</p>                
+            </div>
+        </div>
+        <div class="right">
+            <div id="image1"></div>
+            <div id="image2"></div>
+            <div id="image3"></div>
+            <div id="image4"></div>
+            <div id="image5"></div>
+            <div id="image6"></div>
+
+        </div>
+    </div>
     <div class="page" id="page3"><h1>Side3</h1></div>
     <div class="page" id="page4"><h1>Side4</h1></div>
 </body>
