Website made as much as i could. Page 3 and 4 are not what they should have been, but they messed around.

--- a/03_Web_App_Opgave_final/index.html
+++ b/03_Web_App_Opgave_final/index.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <header> 
-        <div class="menuitem" id="menu1">Side 1</div>
-        <div class="menuitem" id="menu2">Side 2</div>
-        <div class="menuitem" id="menu3">Side 3</div>
-        <div class="menuitem" id="menu4">Side 4</div>
+        <div class="menuitem" id="menu1">TOOL</div>
+        <div class="menuitem" id="menu2">Members</div>
+        <div class="menuitem" id="menu3">Songs</div>
+        <div class="menuitem" id="menu4">Albums</div>
     </header>
     <div class="page" id="page1">
         <div class="box">
@@ -28,15 +28,44 @@
         </div>
     </div>
     <div class="page" id="page2">
-        <div>
-            <h1>Overskrift</h1>
-            <p>Her skal der være en masse tekst v alvoajksældfja øpodojaæoisgdhaoidhjgfæaslkhdhjaæl skjdoæaislkjd aoæislkdj aæosilfkjgislk jddæikd jaæsifhhæoijskjd</p>                
+        <div id="member1"></div>
+        <div id="member2"></div>
+        <div id="member3"></div>
+        <div id="member4"></div>
+    </div>
+
+
+    <div class="page" id="page3">
+        <div class="right" id="song1">
+            <p>Schism           Lateralus       8:35</p>
         </div>
-        <div class="right">
-            
+        <div class="right" id="song2">
+            <p>The Pot          10.000 Days     6:21</p>
+        </div>
+        <div class="right" id="song3">
+            <p>Sober            Undertow        5:06</p>
+        </div>
+        <div class="right" id="song4">
+            <p>Forty Six & 2    Ænima           6:03</p>
+        </div>
+        <div class="right" id="song5">
+            <p>Stinkfist        Ænima           5:12</p>
+        </div>
+        <div class="right" id="song6">
+            <p>Pneuma           Fear Inoculum   11:53</p>
         </div>
     </div>
-    <div class="page" id="page3"><h1>Side3</h1></div>
-    <div class="page" id="page4"><h1>Side4</h1></div>
+
+
+    
+    <div class="page" id="page4">
+        <div id="album1"></div>
+        <div id="album2"></div>
+        <div id="album3"></div>
+        <div id="album4"></div>
+        <div id="album5"></div>
+    </div>
+
+
 </body>
 </html>
