Inserted the Data fetch and completed todays assignment

--- a/03_Web_App_Opgave_final/index.html
+++ b/03_Web_App_Opgave_final/index.html
@@ -28,7 +28,9 @@
         </div>
     </div>
     <div class="page" id="page2">
-        <div id="member1"></div>
+        <div id="member1">
+            <div class="hover">Her er noget tekst</div>
+        </div>
         <div id="member2"></div>
         <div id="member3"></div>
         <div id="member4"></div>
