We did the mqtt thang

--- a/asynkron programmering intro/index.html
+++ b/asynkron programmering intro/index.html
@@ -15,6 +15,11 @@
 <body>
     <header>
         <h1>Reddit API</h1>
+        <div>
+            <input type="text" placeholder="Indtast subreddit" id="searchInput">
+            <button id="searchButton"> OK </button>
+        </div>
+
     </header>
     <div class="page" id="page1">
         <div class="left">
@@ -29,7 +34,9 @@
                 </ul>
             </div>
         </div>        
-        <div class="right"></div>
+        <div class="right">
+            <p>Her kommer der til at være poster fra Reddit når du søger</p>
+        </div>
     </div>
 </body>
 </html>
